Remove unused link js/jquery.js from base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -94,7 +94,7 @@
 
         </div>
 
-        <script src="{{ asset('js/jquery.js') }}"></script>
+        {# <script src="{{ asset('js/jquery.js') }}"></script> #}
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
     </body>
 </html>
