--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,8 +7,15 @@
 {% block body %}
 
     <div class="row">
-        <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-        <a href="{{ path('task_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+        {% if is_granted('IS_AUTHENTICATED') %}
+            <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
+            <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
+            <a href="{{ path('task_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+        {% else %}
+            <a href="{{ path('login') }}" class="btn">
+                Connectez-vous
+            </a>
+            pour consulter et créer des tâches!
+        {% endif %}
     </div>
 {% endblock %}
