--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,7 +10,7 @@
         {% if is_granted('IS_AUTHENTICATED') %}
             <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
             <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-            <a href="{{ path('task_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+            <a href="{{ path('task_done') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
         {% else %}
             <a href="{{ path('login') }}" class="btn">
                 Connectez-vous
