--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -27,18 +27,20 @@
                         <p>{{ task.content }}</p>
                     </div>
                     <div>
-                        <form action="{{ path('task_toggle', {'id' : task.id }) }}">
-                            <button class="btn btn-success btn-sm pull-right">
-                                {% if not task.isDone %}
-                                    Marquer comme faite
-                                {% else %}
-                                    Marquer non terminée
-                                {% endif %}
-                            </button>
-                        </form>
-                        <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                            <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-                        </form>
+                        {% if is_granted('TASK_MODIFY', task) %}
+                            <form action="{{ path('task_toggle', {'id' : task.id }) }}">
+                                <button class="btn btn-success btn-sm pull-right">
+                                    {% if not task.isDone %}
+                                        Marquer comme faite
+                                    {% else %}
+                                        Marquer non terminée
+                                    {% endif %}
+                                </button>
+                            </form>
+                            <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                                <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
+                            </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
